# grpc-services

./: Makefile
grpc_go/grpc_hub/: go.mod  service.pb.go  service_grpc.pb.go
grpc_py/: README.md  pyproject.toml
grpc_py/src/grpc_hub/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
protos/grpc_hub/: service.proto
